package com.appointment.domain.model;

public class Administrator extends User {

    public Administrator(String id, String name) {
        super(id, name);
    }
}
