package com.appointment.domain.model;

public enum AppointmentStatus {
    CONFIRMED,
    CANCELLED
}
