package com.appointment.domain.model;

public enum AppointmentType {
    URGENT,
    FOLLOW_UP,
    ASSESSMENT,
    VIRTUAL,
    IN_PERSON,
    INDIVIDUAL,
    GROUP
}
